cmake_minimum_required(VERSION 3.5)
project(server)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
set(core_sockets Socket.cpp Udp.cpp)
add_library(sockets ${core_sockets})
set(SOURCE_FILES Trip.cpp Trip.h Driver.cpp Driver.h Cab.cpp Cab.h LuxuryCab.cpp
        LuxuryCab.h Passenger.cpp Passenger.h StationInfo.cpp StationInfo.h TaxiStation.cpp
        TaxiStation.h Map.cpp Map.h CreateLayout.cpp CreateLayout.h MapCreator.cpp
        MapCreator.h CabFactory.cpp CabFactory.h Bfs.cpp Bfs.h
        Grid.cpp Node.cpp ParseFromString.cpp PointBase.cpp PointHistory.cpp
         SearchAlgo.cpp SearchAlgo.h Udp.cpp Udp.h Socket.cpp Socket.h CabsSender.cpp CabsSender.h Server.cpp Server.h
        Clock.cpp Clock.h DriverData.cpp DriverData.h)
set(BOOST_ROOT CACHE PATH "/usr/include/boost/")
find_package(Boost 1.58.0 COMPONENTS serialization system)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

#add_executable(server server.cpp)
add_executable(client client.cpp ${SOURCE_FILES} ClientOps.cpp ClientOps.h BoostExports.h DriverData.cpp DriverData.h)
add_executable(server server.cpp ${SOURCE_FILES})
target_link_libraries(server ${Boost_LIBRARIES})
target_link_libraries(client ${Boost_LIBRARIES})

